--- a/exampleapp/src/Main.mxml
+++ b/exampleapp/src/Main.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-               xmlns:login="ru.rknrl.niceskins.login.*"
+               xmlns:login="ru.rknrl.niceskins.login.*" xmlns:mx="library://ns.adobe.com/flex/mx"
                applicationDPI="120"
                creationComplete="onCreationComplete(event)">
 
@@ -62,6 +62,14 @@
                         </s:ArrayList>
                     </s:dataProvider>
                 </s:DropDownList>
+            </s:FormItem>
+
+            <s:FormItem label="Number:">
+                <s:NumericStepper/>
+            </s:FormItem>
+
+            <s:FormItem label="Date:">
+                <mx:DateField/>
             </s:FormItem>
         </s:Form>
 
