--- a/lib/src/ru/rknrl/niceskins/NumericStepperIncrementButtonSkin.mxml
+++ b/lib/src/ru/rknrl/niceskins/NumericStepperIncrementButtonSkin.mxml
@@ -17,9 +17,9 @@
     </s:Rect>
 
     <s:Path horizontalCenter="0" verticalCenter="0" id="arrow"
-            data="M 3.0 0.0 L 3.0 1.0 L 4.0 1.0 L 4.0 2.0 L 5.0 2.0 L 5.0 3.0 L 0.0 3.0 L 0.0 2.0 L 1.0 2.0 L 1.0 1.0 L 2.0 1.0 L 2.0 0.0 L 3.0 0.0">
+            data="M 0 3 L 3 0 L 6 3 Z">
         <s:fill>
-            <s:SolidColor id="arrowFill" color="0" alpha="0.8"/>
+            <s:SolidColor color="gray"/>
         </s:fill>
     </s:Path>
 
