--- a/lib/src/ru/rknrl/niceskins/NumericStepperSkin.mxml
+++ b/lib/src/ru/rknrl/niceskins/NumericStepperSkin.mxml
@@ -2,7 +2,7 @@
 
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
              minHeight="23" minWidth="40"
-             alpha.disabled="0.5">
+             alpha.disabled="0.3">
 
     <fx:Metadata>[HostComponent("spark.components.NumericStepper")]</fx:Metadata>
 
@@ -17,7 +17,7 @@
         </s:stroke>
 
         <s:fill>
-            <s:SolidColor id="bgFill" color="0xfcfcfc"/>
+            <s:SolidColor id="bgFill" color="white"/>
         </s:fill>
     </s:Rect>
 
