--- a/lib-base/css/niceskins.css
+++ b/lib-base/css/niceskins.css
@@ -14,6 +14,7 @@ s|Button {
 s|TextInput {
     skinClass: ClassReference("ru.rknrl.niceskins.TextInputSkin");
     fontSize: 12;
+    fontFamily: Helvetica, Arial, "_sans";
 }
 
 s|NumericStepper {
