data grid no header

--- a/lib-base/src/ru/rknrl/niceskins/DataGridSkin.mxml
+++ b/lib-base/src/ru/rknrl/niceskins/DataGridSkin.mxml
@@ -102,12 +102,19 @@
             hostComponent.focusEnabled = false;
             super.initializationComplete();
         }
+
+        public function get headerVisible():Boolean {
+            return true;
+        }
+
         ]]></fx:Script>
 
     <s:VGroup gap="0" left="0" right="0" top="0" bottom="0">
 
         <s:GridColumnHeaderGroup id="columnHeaderGroup" minHeight="21"
                                  width="100%"
+                                 visible="{headerVisible}"
+                                 includeInLayout="{headerVisible}"
                                  headerRenderer="{headerRenderer}"/>
 
         <s:Group height="100%" width="100%">
