--- a/lib-base/css/niceskins.css
+++ b/lib-base/css/niceskins.css
@@ -8,6 +8,7 @@ s|Application {
 
 s|Button {
     skinClass: ClassReference("ru.rknrl.niceskins.ButtonSkin");
+    fontFamily: Helvetica, Arial, "_sans";
     fontSize: 12;
 }
 
