--- a/lib-base/src/ru/rknrl/niceskins/login/LoginView.mxml
+++ b/lib-base/src/ru/rknrl/niceskins/login/LoginView.mxml
@@ -3,15 +3,19 @@
 
     <s:Image source="{backgroundSource}" width="100%" height="100%" scaleMode="zoom"/>
 
-    <s:Group horizontalCenter="0" verticalCenter="0">
+    <s:Group horizontalCenter="0" verticalCenter="0" width="100%" maxWidth="400">
         <s:Rect width="100%" height="100%" radiusX="4" radiusY="4">
             <s:fill>
                 <s:SolidColor color="white"/>
             </s:fill>
         </s:Rect>
 
-        <s:VGroup horizontalAlign="center" gap="20" width="400" paddingLeft="40" paddingRight="40" paddingTop="50"
-                  paddingBottom="50">
+        <s:VGroup horizontalAlign="center"
+                  width="100%"
+                  gap="20"
+                  paddingLeft="20" paddingRight="20"
+                  paddingTop="50" paddingBottom="50">
+
             <s:Label text="{titleText}" fontSize="35"/>
 
             <s:Spacer/>
